# MiniFocus

./: README.md  docker-compose.yaml
be/: .flake8  Dockerfile  __init__.py  alembic.ini  docker-compose.yml  pyproject.toml
be/alembic/: env.py
be/alembic/versions/: 099277062173_add_user.py  20ca453c9f27_add_parent_id_to_projects.py  3621ed46c007_add_status_and_is_flagged_to_projects_.py  55ccb73c4119_init.py  a6431aa3acd9_initial.py  b7f6d0e34a2b_remove_unique_constraint_from_project_.py  bf25081becee_init.py  f7530b25b77a_init.py
be/app/: __init__.py  main.py
be/app/api/: dependencies.py
be/app/api/endpoints/: auth.py  items.py  projects.py  tasks.py
be/app/config/: settings.py
be/app/core/: __init__.py  security.py
be/app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
be/app/models/: __init__.py  base.py  item.py  project.py  status.py  task.py  user.py
be/app/schemas/: __init__.py  item.py  project.py  task.py  user.py
be/app/tests/: conftest.py  test_items.py  test_projects.py
be/migrations/: env.py
be/migrations/versions/: 07edc34aa2d3_initial_migration.py
be/scripts/: lint.sh
be/tests/: conftest.py
be/tests/api/: test_items.py  test_projects.py
fe/: .env  Dockerfile  nginx.conf  package-lock.json  package.json  tree.ts  vite.config.ts
fe/src/: App.tsx
fe/src/components/: Home.tsx  Login.tsx  ProjectTree.tsx  TaskItem.tsx  TaskList.tsx  Toolbar.tsx
fe/src/contexts/: AuthContext.tsx
fe/src/services/: api.ts
fe/src/types/: project.ts  task.ts  user.ts
